# fancy_yew

./: Cargo.toml  README.md  index.html
src/: lib.rs  main.rs
src/components/: mod.rs
src/components/chart/: chart.rs  chart_js_wrapper.js  chart_js_wrapper.rs  mod.rs
src/components/chart_js/: chart.js  chart.rs  chart_js.rs  config.rs  mod.rs  my_chart.js
src/components/default_layout/: default_layout.css  default_layout.rs  main.css  mod.rs
src/components/editor/: code_mirror_wrapper.js  code_mirror_wrapper.rs  editor.rs
src/components/input/: bool_input.css  bool_input.rs  date_input.rs  file_input.rs  mod.rs  number_input.rs  remote_file_input.css  remote_file_input.rs  string_input.rs  string_number_map_input.rs  string_string_map.css  string_string_map.rs
src/components/nav/: mod.rs  nav.css  nav.rs  nav_item.rs  navable.rs
src/components/resource_header/: mod.rs  resource_header.css  resource_header.rs
src/components/top_bar/: mod.rs  top_bar.css  top_bar.rs
src/fancy_yew/: chart_js.rs  mod.rs
src/layouts/: horizontal.css  horizontal.rs  mod.rs  vertical.css  vertical.rs
src/rest/: file.rs  mod.rs  resource.rs
src/toast_notifications/: mod.rs
