[package]
name = "fancy_yew"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
wasm-bindgen = "0.2.93"
yew = {version = "0.21.0", features = ["csr"]}
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
stylist = { version = "0.13.0", features = ["yew_integration", "parser"] }
web-sys = { version = "0.3.70", features = ["HtmlAnchorElement"] }
yew-router = "0.18.0"
rand = "0.8.5"
chrono = "0.4.38"
wasm-bindgen-futures = "0.4.43"
js-sys = "0.3.70"
