[package]
name = "fancy_yew"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
wasm-bindgen = "0.2.100"
yew = {version = "0.21.0", features = ["csr"]}
yew-hooks = "0.3.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
stylist = { version = "0.13.0", features = ["yew_integration", "parser"] }
web-sys = { version = "0.3.77", features = ["HtmlAnchorElement"] }
yew-router = "0.18.0"
rand = "0.8.5"
chrono = "0.4.40"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
